# social-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  configuration.toml  docker-compose.yml  m.sh
.github/: dependabot.yml
.github/hooks/: pre-commit
.github/workflows/: clippy-checks.yml  docker-latest.yml  docker-tag.yml  manual-deploy.yml  test.yml
docs/: README.md
ext-proto/: friendships.proto
int-proto/: notifications.proto
migrations/: 20221205153846_friendships.down.sql  20221205153846_friendships.up.sql  20221205154317_friendship_history.down.sql  20221205154317_friendship_history.up.sql  20221205155420_user_features.down.sql  20221205155420_user_features.up.sql  20230109144828_add-friendships-index.down.sql  20230109144828_add-friendships-index.up.sql  20230130202319_add-friendships-lower-index.down.sql  20230130202319_add-friendships-lower-index.up.sql  20230417151828_add-friendship-synapse-room-id.down.sql  20230417151828_add-friendship-synapse-room-id.up.sql  20230417151829_add-friendship-synapse-room-id.down.sql  20230417151829_add-friendship-synapse-room-id.up.sql  20230419161219_remove-inactive-friendships-without-history.down.sql  20230419161219_remove-inactive-friendships-without-history.up.sql  20230501194523_add-present-constraint-synapse-room-id-friendships.down.sql  20230501194523_add-present-constraint-synapse-room-id-friendships.up.sql  20230516190257_add-friendship-id-index.down.sql  20230516190257_add-friendship-id-index.up.sql  20230609183358_update-friendship-history-migrated.up.sql
perf-test-plan/: rooms_to_user_ids.csv  test-plan.jmx  test_result.csv 
src/: client.rs  components.rs  configuration.rs  lib.rs  main.rs  metrics.rs
src/api/: app.rs  error.rs  lib.rs  mod.rs
src/components/: app.rs  configuration.rs  database.rs  health.rs  mod.rs  notifications.rs  numbers.rs  redis.rs  synapse.rs  tracing.rs  users_cache.rs
src/db/: friendships_handler.rs  mod.rs  types.rs
src/domain/: address.rs  error.rs  event.rs  friendship_event.rs  friendship_event_validator.rs  friendship_status.rs  friendship_status_calculator.rs  mod.rs  room.rs
src/entities/: friendship_event.rs  friendship_history.rs  friendship_history_events.rs  friendships.rs  mod.rs  prelude.rs  queries.rs  user_features.rs  utils.rs
src/middlewares/: check_auth.rs  metrics_token.rs  mod.rs
src/migrator/: m20221125_000001_friendships_table.rs  m20221125_000002_friendship_history_table.rs  m20221125_000003_friendship_history_events.rs  m20221130_000003_user_features_table.rs  mod.rs
src/models/: address.rs  mod.rs
src/ports/: friendship_synapse.rs  mod.rs  users_cache.rs
src/routes/: mod.rs
src/synapse/: mod.rs  synapse_handler.rs
src/utils/: encrypt_string.rs  mod.rs
tests/: component_database.rs  component_redis.rs  component_users_cache.rs  friendships_flow_database.rs  get_requests_database.rs  health.rs  main.rs  metrics.rs  middleware_check_auth.rs  route_health.rs  route_metrics.rs  route_synapse.rs  route_v1_friendships_get.rs  update_event_database.rs  ws_service_friendship_service.rs
(+93 files in other folders)
