[package]
name = "new_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
clap = { version = "3.2.8", features = ["derive"] }
config = "0.13"
serde = "1.0.136"
log = "0.4.16"
env_logger = "0.9.0"
actix-web-prom = "0.6.0"
async-trait = "0.1.57"
