[package]
name = "social-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
clap = { version = "3.2.8", features = ["derive"] }
config = "0.13"
serde = "1.0.136"
log = "0.4.16"
env_logger = "0.9.0"
async-trait = "0.1.57"
tracing = "0.1"
tracing-log = "0.1"
tracing-actix-web = "0.6"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
opentelemetry = { version = "0.17", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = { version = "0.17" }
reqwest = { version = "0.11", features = ["json"] }
qstring = "0.7.2"
futures-util = "0.3.25"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres", "uuid", "json", "chrono" ] }
deadpool-redis = "0.11.0"
chrono = "0.4.23"
uuid = { version = "1.2.2", features = ["serde"] }
hmac = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"
thiserror = "1.0.37"
serde_json = "1.0.89"
mockall = "0.11.3"
lazy_static = "1.4.0"
actix-http = "3.2.2"
dcl-rpc = { version = "2.3.5", features = ["warp"] }
prost = "0.11.5"
tokio = {version = "1.0.0", default-features = false, features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "time", "sync"]}
warp = "0.3"
tokio-tungstenite = "0.18.0"
urlencoding = "2.1.2"
prometheus = { version = "0.13.3", features = ["process"] }
dcl-http-prom-metrics = "0.1.0"

[build-dependencies]
dcl-rpc = "2.3.5"
prost-build = "0.11.5"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0.94"

[dev-dependencies]
serial_test = "0.9.0"
actix-rt = "2.7.0"
wiremock = "0.5.15"
